--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+<h1>Friend or Foe</h1>
+<p>Indeed if great enmities are ever to be really settled,<br>
+  we think it will be, not by the system of revenge and military success,<br>
+  and by forcing an opponent to swear to a treaty to his disadvantage,<br>
+  but when the more fortunate combatant waives these his privileges,<br>
+  to be guided by gentler feelings conquers his rival in generosity,<br>
+  and accords peace on more moderate conditions than he expected.<br>
+  From that moment, instead of the debt of revenge which violence must entail,<br>
+  his adversary owes a debt of generosity to be paid in kind,<br>
+  and is inclined by honour to stand to his agreement<br>
+  -Thucydides, "The History of the Peloponnesian War"</p>
