Finish layout and routes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, "Home") %>
+<div class="center jumbotron">
 <h1>Friend or Foe</h1>
-<p>"Indeed if great enmities are ever to be really settled,<br>
+<h2>"Indeed if great enmities are ever to be really settled,<br>
   we think it will be, not by the system of revenge and military success,<br>
   and by forcing an opponent to swear to a treaty to his disadvantage,<br>
   but when the more fortunate combatant waives these his privileges,<br>
@@ -9,4 +10,5 @@
   From that moment, instead of the debt of revenge which violence must entail,<br>
   his adversary owes a debt of generosity to be paid in kind,<br>
   and is inclined by honour to stand to his agreement"<br><br>
-  -Thucydides, "The History of the Peloponnesian War"</p>
+  -Thucydides, "The History of the Peloponnesian War"</h2>
+</div>
