update skeleton wording

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,6 +9,6 @@
   and accords peace on more moderate conditions than he expected.<br>
   From that moment, instead of the debt of revenge which violence must entail,<br>
   his adversary owes a debt of generosity to be paid in kind,<br>
-  and is inclined by honour to stand to his agreement"<br><br>
+  and is inclined by honour to stand to his agreement."<br><br>
   -Thucydides, "The History of the Peloponnesian War"</h2>
 </div>
