--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
-<p>This site provides a data-driven look at the complex alliances and enemies of each of <a href="https://en.wikipedia.org/wiki/List_of_sovereign_states">our Earth's nation-states.</a></p>
+<p>This site will provide a data-driven look at the complex alliances and enemies of each of <a href="https://en.wikipedia.org/wiki/List_of_sovereign_states">our Earth's nation-states.</a></p>
