--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -19,11 +19,9 @@ textarea {
   resize: vertical;
 }
 
-.center {
-  text-align: center;
-  h1 {
+h1 {
+    text-align: right;
     margin-bottom: 10px;
-  }
 }
 
 /* typography */
@@ -36,7 +34,6 @@ h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
-  text-align: center;
 }
 
 h2 {
