--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,7 +20,7 @@ textarea {
 }
 
 h1 {
-    text-align: right;
+    text-align: center;
     margin-bottom: 10px;
 }
 
@@ -40,7 +40,7 @@ h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
   margin-bottom: 30px;
-  text-align: center;
+  text-align: left;
   font-weight: normal;
   color: $gray-light;
 }
