--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,7 @@ h1 {
 h2 {
   font-size: 1.2em;
   letter-spacing: -1px;
+  margin-left: 330px;
   margin-bottom: 30px;
   text-align: left;
   font-weight: normal;
