--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,37 @@
 <% provide(:title, "Home") %>
-<div class="center jumbotron">
-<h1>Friend or Foe</h1>
-<h2>"Indeed if great enmities are ever to be really settled,<br>
-  we think it will be, not by the system of revenge and military success,<br>
-  and by forcing an opponent to swear to a treaty to his disadvantage,<br>
-  but when the more fortunate combatant waives these his privileges,<br>
-  to be guided by gentler feelings conquers his rival in generosity,<br>
-  and accords peace on more moderate conditions than he expected.<br>
-  From that moment, instead of the debt of revenge which violence must entail,<br>
-  his adversary owes a debt of generosity to be paid in kind,<br>
-  and is inclined by honour to stand to his agreement."<br><br>
-  -Thucydides, "The History of the Peloponnesian War"</h2>
+
+<div class="row">
+  <div class="center jumbotron">
+    <%= form_for(:country, url: root_path) do |f| %>
+
+        <%= f.label "How do" %>
+        <%= f.select :country, ['Please select country 1', 'The United States of America', 'Iraq', 'Germany']  %>
+        <%= f.label "and" %>
+        <%= f.select :country, ['Please select country 2', 'Iraq', 'Germany', 'The United States of America']  %>
+        <%= f.label "feel about one another?" %>
+
+
+    <% end %>
+
+  </div>
 </div>
+
+<!---->
+<!--<h1>Friend or Foe</h1>-->
+  <!--<H4>How do:</H4>-->
+  <!--<select name="post[author_id]" class="dropdown1">-->
+    <!--<option value="">Please select</option>-->
+    <!--<option value="1" selected="selected">The United States of America</option>-->
+    <!--<option value="2">Iraq</option>-->
+    <!--<option value="3">Japan</option>-->
+  <!--</select>-->
+  <!--<h4>and</h4>-->
+  <!--<select name="post[author_id]" class="dropdown2">-->
+    <!--<option value="">Please select</option>-->
+    <!--<option value="1" selected="selected">Iraq</option>-->
+    <!--<option value="2">United States of America</option>-->
+    <!--<option value="3">Japan</option>-->
+  <!--</select>-->
+  <!--<h4>feel about one another?</h4>-->
+  <!-- -->
+<!--</div>-->
