Changed home page interface

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,8 @@
         <%= f.label "and" %>
         <%= f.select :country, ['Please select country 2', 'Iraq', 'Germany', 'The United States of America']  %>
         <%= f.label "feel about one another?" %>
-
+        <br>
+        <%= f.submit "Submit", class: "btn btn-primary" %>
 
     <% end %>
 
