--- a/app/views/relations/_form.html.erb
+++ b/app/views/relations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@country, @relation) do |f| %>
+<%= form_for(@relation) do |f| %>
   <% if @relation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@relation.errors.count, "error") %> prohibited this relation from being saved:</h2>
