--- a/app/views/relations/index.html.erb
+++ b/app/views/relations/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= relation.name %></td>
         <td><%= relation.parent_id %></td>
-        <td><%= link_to 'Show', country_relation_path(@country, relation) %></td>
-        <td><%= link_to 'Edit', edit_relation_path(@country, relation) %></td>
-        <td><%= link_to 'Destroy', [@country, relation], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', relation %></td>
+        <td><%= link_to 'Edit', edit_relation_path(relation) %></td>
+        <td><%= link_to 'Destroy', relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
