--- a/app/views/relations/show.html.erb
+++ b/app/views/relations/show.html.erb
@@ -10,5 +10,5 @@
   <%= @relation.parent_id %>
 </p>
 
-<%= link_to 'Edit', edit_country_relation_path(@country, @relation) %> |
-<%= link_to 'Back', conutry_relation_path(@country) %>
+<%= link_to 'Edit', edit_relation_path(@relation) %> |
+<%= link_to 'Back', relations_path %>
