--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "Friend or Foe", root_path, id: "logo" %>
+	<div class="Headly">
+		<div class="friendlo">Friend</div>
+		<div class="foelo">Foe</div>
+	</div>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",    root_path %></li>
