--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,32 @@
 
 /* mixins, variables, etc. */
 
+@font-face {
+    font-family: 'foe';
+    src: url('horroween-webfont.eot');
+    src: url('horroween-webfont.eot?#iefix') format('embedded-opentype'),
+         url('horroween-webfont.woff2') format('woff2'),
+         url('horroween-webfont.woff') format('woff'),
+         url('horroween-webfont.ttf') format('truetype'),
+         url('horroween-webfont.svg#horroweenregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'friend';
+    src: url('kgonemorenight-webfont.eot');
+    src: url('kgonemorenight-webfont.eot?#iefix') format('embedded-opentype'),
+         url('kgonemorenight-webfont.woff2') format('woff2'),
+         url('kgonemorenight-webfont.woff') format('woff'),
+         url('kgonemorenight-webfont.ttf') format('truetype'),
+         url('kgonemorenight-webfont.svg#kg_one_more_nightregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 $gray-medium-light: #eaeaea;
 
 /* universal */
@@ -78,14 +104,23 @@ color: #FFFFFF;
 
 .friendlo {
     float: left;
+    float: left;
+    font-family: friend;
+    font-size: 18em;
+    margin-top: 8%;
+	margin-left:15%;
 }
 
 .foelo {
     float: right;
+	font-family: foe;
+    font-size: 21em;
+    margin-top: 8%;
+	margin-right:15%;
 }
 
 header.navbar.navbar-fixed-top.navbar-inverse{
-height:15%;
+height:20%;
 background: #6dbcdb; /* Old browsers */
 background: -moz-linear-gradient(left, #6dbcdb 0%, #6dbcdb 50%, #fc4349 50%, #fc4349 100%); /* FF3.6+ */
 background: -webkit-gradient(linear, left top, right top, color-stop(0%,#6dbcdb), color-stop(50%,#6dbcdb), color-stop(50%,#fc4349), color-stop(100%,#fc4349)); /* Chrome,Safari4+ */
