--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,20 @@
 
 /* mixins, variables, etc. */
 
+
+@font-face {
+    font-family: 'ors';
+    src: url('kgalittleswag-webfont.eot');
+    src: url('kgalittleswag-webfont.eot?#iefix') format('embedded-opentype'),
+         url('kgalittleswag-webfont.woff2') format('woff2'),
+         url('kgalittleswag-webfont.woff') format('woff'),
+         url('kgalittleswag-webfont.ttf') format('truetype'),
+         url('kgalittleswag-webfont.svg#kg_a_little_swagregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 @font-face {
     font-family: 'foe';
     src: url('horroween-webfont.eot');
