Added normalize and switched to country instead of # for option

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -155,3 +155,10 @@ footer {
     }
   }
 }
+
+
+/* main page*/
+
+select, option { background: #fff; }
+select.country_all_val, option[value="Andorra"] { background: red; }
+select.bar, option[value="Afghanistan"] { background: green; }
