Added nato_member column to DB and to relevant entries in seeds.rb

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -5,3 +5,7 @@
 <br>
 <label>Opinion of the USA: </label>
 <%= @country.opinion_of_usa %>
+<br>
+<% if @country.nato_member == 1 %>
+    Nato Member
+<% end %>
