Rewrote controllers to be RESTful + got relations routes to a better and stable state, though they're not perfect yet. Still need to associate relations to countries in a more logical manner.

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -9,8 +9,15 @@
 <h1 id="memberships">Security Alliances</h1>
 <% if @country.nato_member == 1 %>
 <h2>Nato Member</h2>
-<div class="nato">
-    
+<div class="nato">   
 </div>
 </div>
+
 <% end %>
+
+<p>
+  <%= link_to pluralize(@country.relations.size, 'relations'), country_relations_path(@country) %> |
+  <%= link_to "Back to Countries", countries_path(@country) %>
+</p>
+
+
