--- a/app/views/relations/_form.html.erb
+++ b/app/views/relations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@relation) do |f| %>
+<%= form_for [@country, @relation] do |f| %>
   <% if @relation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@relation.errors.count, "error") %> prohibited this relation from being saved:</h2>
@@ -15,10 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="field">
-    <%= f.label :parent_id %><br>
-    <%= f.number_field :parent_id %>
-  </div>
+	<div class="field2">
+		<%= f.label :country_id %><br>
+    <%= f.number_field :country_id %>
+	</div>
   <div class="actions">
     <%= f.submit %>
   </div>
