--- a/app/views/relations/index.html.erb
+++ b/app/views/relations/index.html.erb
@@ -1,29 +1,25 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Listing Relations</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Parent</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @relations.each do |relation| %>
-      <tr>
-        <td><%= relation.name %></td>
-        <td><%= relation.parent_id %></td>
-        <td><%= link_to 'Show', relation %></td>
-        <td><%= link_to 'Edit', edit_relation_path(relation) %></td>
-        <td><%= link_to 'Destroy', relation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<strong>Country:</strong>
 <br>
+<%= @country.name %>
+<br><br>
+<strong>Relations:</strong>
+<br>
+<% if @relations.present? %>
+  <% @relations.each do |relation| %>
+   <tr>
+		<%= relation.name %>
+    <td><%= link_to "Show", [@country, relation] %></td>
+    <td><%= link_to 'Edit', edit_country_relation_path(@country, relation) %></td>
+    <td><%= link_to 'Destroy', country_relation_path(@country, relation), :confirm => 'Are you sure?', :method => :delete %></td>
+		<br>
+   </tr>
+ <% end %>
+<% else %>
+ <tr>
+<br><br>
+   <td colspan=4>You don't have any relations yet.</td>
+ </tr>
+<% end %>
 
-<%= link_to 'New Relation', new_relation_path %>
+
